--- a/MongDb/mongDB_text.ipynb
+++ b/MongDb/mongDB_text.ipynb
@@ -10,9 +10,7 @@
    "cell_type": "markdown",
    "id": "d09944cb",
    "metadata": {},
-   "source": [
-    "mongodb+srv://jubayerhu1:jubayer@cluster0.fgktxi7.mongodb.net/?appName=Cluster0"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -12723,16 +12721,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "03176fcc",
    "metadata": {},
    "outputs": [],
    "source": [
     "DB_NAME = \"InceptionDB\" # data base name\n",
     "COLLECTION_NMAE = \"InceptionCollection\" # collection name\n",
-    "#COLLECTION_URL = \"mongodb+srv://jubayerhu1:151983Ju@@cluster0.kigbqus.mongodb.net/?appName=Cluster0\" # Connection links\n",
-    "# mongodb+srv://jubayerhu1:151983Ju@@cluster0.kigbqus.mongodb.net/?appName=Cluster0\n",
-    "COLLECTION_URL = \"mongodb+srv://jubayerhu1:jubayer@cluster0.fgktxi7.mongodb.net/?appName=Cluster0\""
+    "\n",
+    "COLLECTION_URL = \"enter your cluster link\""
    ]
   },
   {
@@ -12741,8 +12738,7 @@
    "metadata": {},
    "source": [
     "jubayerhu1  / jubayer\n",
-    "\n",
-    "mongodb+srv://jubayerhu1:jubayer@cluster0.fgktxi7.mongodb.net/?appName=Cluster0"
+    "\n"
    ]
   },
   {
