NLP-APP-update k

--- a/NLP-APP/research.ipynb
+++ b/NLP-APP/research.ipynb
@@ -61,21 +61,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "id": "76765030",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AIzaSyCWgsrf07CHt20-mgoFoGM52STw575GzLU\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m GEMINI_API_KEY = \u001b[43mos\u001b[49m.getenv(\u001b[33m\"\u001b[39m\u001b[33mGEMINI_API_KEY\u001b[39m\u001b[33m\"\u001b[39m) \u001b[38;5;66;03m# it come for env file \u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m#print(GEMINI_API_KEY)\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name 'os' is not defined"
      ]
     }
    ],
    "source": [
     "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\") # it come for env file \n",
-    "print(GEMINI_API_KEY)"
+    "#print(GEMINI_API_KEY)"
    ]
   },
   {
