--- a/Exercise/shortexercise/questionbaseEx.ipynb
+++ b/Exercise/shortexercise/questionbaseEx.ipynb
@@ -51,6 +51,59 @@
     "\n",
     "print(balance(99))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3f2b592",
+   "metadata": {},
+   "source": [
+    "what is the output A. student discount B. No discount c.16 d.Error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b68387f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student discount \n"
+     ]
+    }
+   ],
+   "source": [
+    "age =16\n",
+    "student = True\n",
+    "if age < 18:\n",
+    "    if student :\n",
+    "        print(\"Student discount \")\n",
+    "    else:\n",
+    "        print(\"No discount\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "c4bc0a68",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "16< 18"
+   ]
   }
  ],
  "metadata": {
