--- a/Exercise/BasicExerciseInception/ifElse.ipynb
+++ b/Exercise/BasicExerciseInception/ifElse.ipynb
@@ -44,6 +44,49 @@
     "\n",
     "print(\"..end ..\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2d0e1c9",
+   "metadata": {},
+   "source": [
+    "Assignment 2: ATM Withdrawal System\n",
+    "Problem:\n",
+    "Ask the user for their account balance and the amount they want to withdraw.\n",
+    "● If the withdrawal amount is greater than the balance → print \"Insufficient\n",
+    "Balance\"\n",
+    "● If the withdrawal amount is less than or equal to balance → print \"Transaction\n",
+    "Successful\" and show the remaining balance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "3ab17a07",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transaction Successful\n",
+      "Remaining balance: $0.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "balance = float(input(\"Enter your account balance: $\"))\n",
+    "withdraw_amount = float(input(\"Enter the amount you want to withdraw: $\"))\n",
+    "\n",
+    "if withdraw_amount > balance:\n",
+    "    print(\"Insufficient Balance\")\n",
+    "elif withdraw_amount < 0:\n",
+    "    print(\"Withdrawal amount cannot be negative.\")\n",
+    "else:\n",
+    "    remaining_balance = balance - withdraw_amount\n",
+    "    print(\"Transaction Successful\")\n",
+    "    print(f\"Remaining balance: ${remaining_balance:.2f}\")"
+   ]
   }
  ],
  "metadata": {
