--- a/Exercise/BasicExerciseInception/ifElse.ipynb
+++ b/Exercise/BasicExerciseInception/ifElse.ipynb
@@ -87,6 +87,55 @@
     "    print(\"Transaction Successful\")\n",
     "    print(f\"Remaining balance: ${remaining_balance:.2f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bde4cba",
+   "metadata": {},
+   "source": [
+    "Assignment 3: Student Grade Calculator\n",
+    "Problem:\n",
+    "Input marks (0–100) and print grade based on:\n",
+    "● 90–100 → A+\n",
+    "● 80–89 → A\n",
+    "● 70–79 → B\n",
+    "● 60–69 → C\n",
+    "● Below 60 → Fail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5ff09b7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student Grade Calculator  start ....\n",
+      "Grade : C\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( \"Student Grade Calculator  start ....\")\n",
+    "\n",
+    "marks = float(input(\"Enter your mark (0-100) : \"))\n",
+    "\n",
+    "if marks <0 and marks >100:\n",
+    "    print (\"Invalid input . Masrks must be between 0 - 100. \")\n",
+    "elif marks >=90 :\n",
+    "    print( \"Grade : A+\")\n",
+    "elif marks >= 80:\n",
+    "    print(\"Grade : A\")\n",
+    "elif marks >= 70:\n",
+    "    print(\"Grade : B\")\n",
+    "elif marks >= 60:\n",
+    "    print(\"Grade : C\")\n",
+    "else:\n",
+    "    print(\"Grade : Fail\")"
+   ]
   }
  ],
  "metadata": {
