--- a/Exercise/BasicExerciseInception/ifElse.ipynb
+++ b/Exercise/BasicExerciseInception/ifElse.ipynb
@@ -136,6 +136,49 @@
     "else:\n",
     "    print(\"Grade : Fail\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ec84866",
+   "metadata": {},
+   "source": [
+    "Assignment 4: Bus Ticket Discount\n",
+    "Problem:\n",
+    "Ask the user for age and print ticket price:\n",
+    "● Below 5 → Free\n",
+    "● 5–18 → 50% Discount\n",
+    "● 60 or above → 30% Discount\n",
+    "● Others → Full Price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1c6309c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ticket Price: 50% Discount\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = int(input(\"Enter your age: \"))\n",
+    "\n",
+    "if age < 0:\n",
+    "    print(\"Invalid age. Age cannot be negative.\")\n",
+    "elif age < 5:\n",
+    "    print(\"Ticket Price: Free\")\n",
+    "elif age >= 5 and age <= 18:\n",
+    "    print(\"Ticket Price: 50% Discount\")\n",
+    "elif age >= 60:\n",
+    "    print(\"Ticket Price: 30% Discount\")\n",
+    "else:\n",
+    "    print(\"Ticket Price: Full Price\")"
+   ]
   }
  ],
  "metadata": {
