--- a/Exercise/BasicExerciseInception/ifElse.ipynb
+++ b/Exercise/BasicExerciseInception/ifElse.ipynb
@@ -179,6 +179,47 @@
     "else:\n",
     "    print(\"Ticket Price: Full Price\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "add82bca",
+   "metadata": {},
+   "source": [
+    "Assignment 5: Restaurant Bill with Discount\n",
+    "Problem:\n",
+    "Take total bill amount from the user:\n",
+    "● If the bill is above 1000 → apply 10% discount\n",
+    "● Otherwise → no discount\n",
+    "Then print the final bill amount."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c156f195",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A 10% discount was applied.\n",
+      "Final bill amount: $3600.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "bill = float(input(\"Enter total bill amount: $\"))\n",
+    "\n",
+    "if bill > 1000:\n",
+    "    discount = bill * 0.10\n",
+    "    final_bill = bill - discount\n",
+    "    print(f\"A 10% discount was applied.\")\n",
+    "    print(f\"Final bill amount: ${final_bill:.2f}\")\n",
+    "else:\n",
+    "    print(\"No discount applied.\")\n",
+    "    print(f\"Final bill amount: ${bill:.2f}\")"
+   ]
   }
  ],
  "metadata": {
