--- a/ExceptionHandling/Exercise.ipynb
+++ b/ExceptionHandling/Exercise.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "491feffe",
+   "metadata": {},
+   "source": [
+    "# Python Try Except\n",
+    "The try block lets you test a block of code for errors.\n",
+    "\n",
+    "The except block lets you handle the error.\n",
+    "\n",
+    "The else block lets you execute code when there is no error.\n",
+    "\n",
+    "The finally block lets you execute code, regardless of the result of the try- and except blocks.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0b2850f4",
    "metadata": {},
    "source": [
