--- a/Pandas/pandsW3.ipynb
+++ b/Pandas/pandsW3.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "378e9281",
    "metadata": {},
    "outputs": [
@@ -48,6 +48,7 @@
     }
    ],
    "source": [
+    "# create a data set of dictionary: \n",
     "mydataset = {\n",
     "    'cars' : ['BMW','volvo','Ford'],\n",
     "    'passings' : [3,2,7]\n",
