--- a/statistic/Outliers Detection using IQR in statistics.ipynb
+++ b/statistic/Outliers Detection using IQR in statistics.ipynb
@@ -5,7 +5,8 @@
    "id": "9dcd8b2c",
    "metadata": {},
    "source": [
-    "# IQR\n",
+    "# Finding outlier for dataSet and boxplot\n",
+    "## IQR\n",
     "1. Sort the data\n",
     "2. Calculate Q1(25%) and Q3(75%)\n",
     "3. IQR (Q3 -Q1)\n",
