--- a/EDA -Assignment/Phase3.ipynb
+++ b/EDA -Assignment/Phase3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "edf821cb",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import pandas as pd \n",
     "import numpy as np\n",
     "import seaborn as sns\n",
-    "import statistics as st"
+    "import statistics as st\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "id": "9caae4cb",
    "metadata": {},
    "outputs": [],
